force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/agf__ADM_Theme__c.object-meta.xml
<CustomObject>
    <label>Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>