force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/fields/agf__Active__c.field-meta.xml
<CustomField>
    <fullName>agf__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>