force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/fields/agf__Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship with a scrum team so teams can organize their themes</description>
    <label>Scrum Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Themes</relationshipName>
    <type>Lookup</type>
</CustomField>