force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__ADMThemes.listView-meta.xml
<ListView>
    <fullName>agf__ADMThemes</fullName>
    <columns>NAME</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>ADM</value>
    </filters>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>ADM Team</value>
    </filters>
    <label>ADM Themes</label>
</ListView>