force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__Agent_Console_2_0_Themes.listView-meta.xml
<ListView>
    <fullName>agf__Agent_Console_2_0_Themes</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Agent Console 2.0</value>
    </filters>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>CSS UI</value>
    </filters>
    <label>Agent Console 2.0 Themes</label>
</ListView>