force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>