force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__AppStoreThemes.listView-meta.xml
<ListView>
    <fullName>agf__AppStoreThemes</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>agf__Scrum_Team__c</columns>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Theme_Rank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Opportunity to Quote,Order to Cash,Webstore</value>
    </filters>
    <label>AppStore Themes</label>
</ListView>