force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__ClientEngineering.listView-meta.xml
<ListView>
    <fullName>agf__ClientEngineering</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>CE:</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DSW</value>
    </filters>
    <label>Client Engineering</label>
</ListView>