force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__Dreamforce_App_Themes.listView-meta.xml
<ListView>
    <fullName>agf__Dreamforce_App_Themes</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>agf__Theme_Rank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Dreamforce App</value>
    </filters>
    <label>Dreamforce App Themes</label>
</ListView>