force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__FinSrv146WMV4.listView-meta.xml
<ListView>
    <fullName>agf__FinSrv146WMV4</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Yerkes,Abramowitz</value>
    </filters>
    <label>FinSrv 146.WM.V4</label>
</ListView>