force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__GUSTeamThemes.listView-meta.xml
<ListView>
    <fullName>agf__GUSTeamThemes</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>GUS</value>
    </filters>
    <label>GUS Team Themes</label>
</ListView>