force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__IDE.listView-meta.xml
<ListView>
    <fullName>agf__IDE</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Theme_Rank__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>IDE</value>
    </filters>
    <label>IDE</label>
</ListView>