force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__MonitoringandManagement.listView-meta.xml
<ListView>
    <fullName>agf__MonitoringandManagement</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>M&amp;M</value>
    </filters>
    <label>Monitoring and Management</label>
</ListView>