force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__Oppty2Quote_Themes.listView-meta.xml
<ListView>
    <fullName>agf__Oppty2Quote_Themes</fullName>
    <columns>agf__Theme_Rank__c</columns>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Opportunity to Quote</value>
    </filters>
    <label>Oppty2Quote Themes</label>
</ListView>