force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__Profiles_and_Feeds.listView-meta.xml
<ListView>
    <fullName>agf__Profiles_and_Feeds</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Profiles and Feeds</value>
    </filters>
    <label>Profiles and Feeds</label>
</ListView>