force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__UpgradeandPackaging.listView-meta.xml
<ListView>
    <fullName>agf__UpgradeandPackaging</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>PKG</value>
    </filters>
    <label>Upgrade and Packaging</label>
</ListView>