force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Theme__c/listViews/agf__Web_Development.listView-meta.xml
<ListView>
    <fullName>agf__Web_Development</fullName>
    <columns>NAME</columns>
    <columns>agf__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>Web Development</value>
    </filters>
    <label>Web Development</label>
</ListView>